--- a/_config.yml
+++ b/_config.yml
@@ -85,8 +85,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: Aidan's Blog # blog_name will be displayed in your blog page
-blog_description: Description here
+blog_name: blog # blog_name will be displayed in your blog page
+blog_description: A collection of ramblings that might not make any sense.
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
@@ -185,7 +185,7 @@ exclude:
   - lighthouse_results/
   - package.json
   - package-lock.json
-  - _pages/about_einstein.md
+  - _pages/about.md
   - purgecss.config.js
   - README.md
   - readme_preview/
@@ -254,8 +254,13 @@ jekyll-archives:
   books:
     enabled: [year, tags, categories] # enables year, tag and category archives (remove if you need to disable one of them).
 
-display_tags: ["formatting", "images", "links", "math", "code", "blockquotes"] # these tags will be displayed on the front page of your blog
-display_categories: ["external-services"] # these categories will be displayed on the front page of your blog
+display_tags: ["representation learning",
+               "sequence modelling",
+               "efficient ml"
+              ] # these tags will be displayed on the front page of your blog
+display_categories: ["paper summaries",
+                     "blog posts"
+                    ] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
@@ -384,7 +389,7 @@ enable_masonry: true # enables automatic project cards arrangement
 enable_math: true # enables math typesetting (uses MathJax)
 enable_tooltips: false # enables automatic tooltip links generated for each section titles on pages and posts
 enable_darkmode: true # enables switching between light/dark modes
-enable_navbar_social: false # enables displaying social links in the navbar on the about page
+enable_navbar_social: true # enables displaying social links in the navbar on the about page
 enable_project_categories: true # enables categorization of projects into multiple categories
 enable_medium_zoom: true # enables image zoom feature (as on medium.com)
 enable_progressbar: true # enables a horizontal progress bar linked to the vertical scroll position
@@ -633,10 +638,7 @@ jsonresume:
   - education
   - publications
   - projects
-  - volunteer
   - awards
   - certificates
   - skills
-  - languages
   - interests
-  - references
