--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your o
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
-url: https://pur3luck.github.io  # the base hostname & protocol for your site
-baseurl: / # the subpath of your site, e.g. /blog/. Leave blank for root
+url: https://pur3luck.github.io # the base hostname & protocol for your site
+baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path: # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 back_to_top: true # set to false to disable the back to top button
@@ -185,7 +185,6 @@ exclude:
   - lighthouse_results/
   - package.json
   - package-lock.json
-  - _pages/about.md
   - purgecss.config.js
   - README.md
   - readme_preview/
@@ -254,13 +253,8 @@ jekyll-archives:
   books:
     enabled: [year, tags, categories] # enables year, tag and category archives (remove if you need to disable one of them).
 
-display_tags: ["representation learning",
-               "sequence modelling",
-               "efficient ml"
-              ] # these tags will be displayed on the front page of your blog
-display_categories: ["paper summaries",
-                     "blog posts"
-                    ] # these categories will be displayed on the front page of your blog
+display_tags: ["representation learning", "sequence modelling", "efficient ml"] # these tags will be displayed on the front page of your blog
+display_categories: ["paper summaries", "blog posts"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
